fix in buffer
